package ua.hillel.lessons.lesson26.solid.demos._4_interface_segregation.good;

public interface UIComponent {
	void validate();
}
